fix scroll right icon z-index.

--- a/css/main.css
+++ b/css/main.css
@@ -766,6 +766,7 @@ a#about_link {
     right: 20px;
     top: 211px;
     border-radius: 4px;
+    z-index: 960;
 }
 .scroll_right.fixed {
     opacity: 0;
